--- a/views/todo/list.ejs
+++ b/views/todo/list.ejs
@@ -1,3 +1,7 @@
+ <!-- Student ID: 301216721
+ Name: Kin Man Tung
+ Date: 28/10/2022 -->
+
 <%- include ('../partials/header') %>
 
   <!-- Main Content -->
